Fix for breadcrumb overflow on mobile
Applies to #31

--- a/_sass/_breadcrumbs.sass
+++ b/_sass/_breadcrumbs.sass
@@ -25,6 +25,9 @@ $color-arrow: $color-grey-light
   margin: 0
   list-style: none
   overflow: hidden
+  
+  // Fix for breadcrumb overflow on mobile
+  min-width: 720px
 
   li
     padding-bottom: 0
